addded new layout

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis&display=swap"
+      rel="stylesheet"
+    />
     <script src="script.js" type="module"></script>
   </head>
   <body>
@@ -32,5 +44,69 @@
       </div>
     </nav>
     <section class="hero"></section>
+    <section class="main-content">
+      <div class="content-one-history slide">
+        <img src="/media/history.jpg" class="history-img" />
+        <div class="history-content">
+          <h1 class="history-title">Our Fragrance Legacy</h1>
+          <p class="history-paragraph">
+            Red Devils Fragrances has a rich history that spans decades. Founded
+            on a vision of capturing the essence of allure, we have been
+            dedicated to crafting exceptional scents since our inception. From
+            humble beginnings, our perfumers have honed their artistry, blending
+            the finest ingredients to create fragrances that transcend time and
+            captivate the senses.
+          </p>
+        </div>
+      </div>
+      <div class="content-two-history slide">
+        <img src="/media/history-two.jpg" class="history-two-img" />
+        <div class="history-content-two">
+          <h1 class="history-title-two">A Legacy of Innovation</h1>
+          <p class="history-paragraph-two">
+            Red Devils Fragrances has continued to push the boundaries of
+            perfumery through innovation and creativity. Our perfumers are
+            constantly exploring new scent combinations, drawing inspiration
+            from art, nature, and cultural influences.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="our-products">
+      <h1 class="product-container-title">New Arrivals</h1>
+      <div class="product-gallery">
+        <div class="product-container">
+          <img src="/media/diorhomme.jpg" class="product-image" />
+          <p class="product-title">Dior Homme Intense</p>
+          <p>$199.99</p>
+        </div>
+        <div class="product-container">
+          <img src="/media/dioredp.webp" class="product-image" />
+          <p class="product-title">Dior Sauvage</p>
+          <p>$299.99</p>
+        </div>
+        <div class="product-container">
+          <img src="/media/sauvage.jpg" class="product-image" />
+          <p class="product-title">Eau Sauvage</p>
+          <p>$249.99</p>
+        </div>
+        <div class="product-container">
+          <img src="/media/fahrenheit.jpg" class="product-image" />
+          <p class="product-title">Fahrenheit</p>
+          <p>$399.99</p>
+        </div>
+        <div class="product-container">
+          <img src="/media/higher.webp" class="product-image" />
+          <p class="product-title">Higher</p>
+          <p>$149.99</p>
+        </div>
+        <div class="product-container">
+          <img src="/media/dune.webp" class="product-image" />
+          <p class="product-title">Dune Pour Homme</p>
+          <p>$49.99</p>
+        </div>
+      </div>
+    </section>
+    section.
   </body>
 </html>
