--- a/index.html
+++ b/index.html
@@ -76,37 +76,94 @@
       <h1 class="product-container-title">New Arrivals</h1>
       <div class="product-gallery">
         <div class="product-container">
-          <img src="/media/diorhomme.jpg" class="product-image" />
+          <img src="/media/diorhomme.png" class="product-image" />
           <p class="product-title">Dior Homme Intense</p>
           <p>$199.99</p>
         </div>
         <div class="product-container">
-          <img src="/media/dioredp.webp" class="product-image" />
+          <img src="/media/dioredp.png" class="product-image" />
           <p class="product-title">Dior Sauvage</p>
           <p>$299.99</p>
         </div>
         <div class="product-container">
-          <img src="/media/sauvage.jpg" class="product-image" />
+          <img src="/media/sauvage.png" class="product-image" />
           <p class="product-title">Eau Sauvage</p>
           <p>$249.99</p>
         </div>
         <div class="product-container">
-          <img src="/media/fahrenheit.jpg" class="product-image" />
+          <img src="/media/fahrenheit.png" class="product-image" />
           <p class="product-title">Fahrenheit</p>
           <p>$399.99</p>
         </div>
         <div class="product-container">
-          <img src="/media/higher.webp" class="product-image" />
+          <img src="/media/higher.png" class="product-image" />
           <p class="product-title">Higher</p>
           <p>$149.99</p>
         </div>
         <div class="product-container">
-          <img src="/media/dune.webp" class="product-image" />
+          <img src="/media/dune.png" class="product-image" />
           <p class="product-title">Dune Pour Homme</p>
           <p>$49.99</p>
         </div>
       </div>
     </section>
-    section.
+    <section class="testimonials-container">
+      <h1 class="testimonials-title">Our Reviews</h1>
+      <div class="testimonials">
+        <div class="testimonial-container">
+          <img src="/media/placeholder.jpg" alt="" class="testimonial-img" />
+          <p class="testimonial-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+            dolorum recusandae, ab magni voluptatem quidem a asperiores
+            temporibus? Reiciendis, quidem!
+          </p>
+        </div>
+        <div class="testimonial-container">
+          <img src="/media/placeholder.jpg" alt="" class="testimonial-img" />
+          <p class="testimonial-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+            dolorum recusandae, ab magni voluptatem quidem a asperiores
+            temporibus? Reiciendis, quidem!
+          </p>
+        </div>
+        <div class="testimonial-container">
+          <img src="/media/placeholder.jpg" class="testimonial-img" />
+          <p class="testimonial-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+            dolorum recusandae, ab magni voluptatem quidem a asperiores
+            temporibus? Reiciendis, quidem!
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="row-one">
+
+        <div class="col-one">
+          <img src="/media/logo.png" class="footer-logo"/>
+          <h1 class="logo-title">Red Devils Fragrances</h1>
+        </div>
+        <div class="col-two">
+          <a href="">Home</a>
+          <a href="">Product</a>
+          <a href="">Testimonials</a>
+        </div>
+        <div class="col-three">
+          
+          <a href="">About</a>
+          <a href="">Contact</a>
+          <a href="">Address</a>
+        </div>
+        <div class="col-four">
+          <h1 class="contact-title">Contact Details</h1>
+          <p>Example@email.com</p>
+          <p>Phone Contact - 999 9999</p>
+          <p>Opening Hours: 9am-5pm Weekdays</p>
+        </div>
+      </div>
+      <div class="row-two">
+        <p class="copyright">©Copyright NN. All rights reserved</p>
+      </div>
+    </footer>
   </body>
 </html>
