updated testimonial page

--- a/index.html
+++ b/index.html
@@ -111,36 +111,41 @@
       <h1 class="testimonials-title">Our Reviews</h1>
       <div class="testimonials">
         <div class="testimonial-container">
-          <img src="/media/placeholder.jpg" alt="" class="testimonial-img" />
+          <img src="/media/testimonial1.jpg" alt="" class="testimonial-img" />
           <p class="testimonial-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-            dolorum recusandae, ab magni voluptatem quidem a asperiores
-            temporibus? Reiciendis, quidem!
+            "I absolutely adore the Dior fragrances I purchased from this
+            website! The scents are so luxurious and long-lasting. My favorite
+            is Miss Dior Blooming Bouquet; it's delicate yet captivating,
+            perfect for any occasion. I always receive compliments whenever I
+            wear it. Highly recommended!"
           </p>
         </div>
         <div class="testimonial-container">
-          <img src="/media/placeholder.jpg" alt="" class="testimonial-img" />
+          <img src="/media/testimonial2.jpg" alt="" class="testimonial-img" />
           <p class="testimonial-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-            dolorum recusandae, ab magni voluptatem quidem a asperiores
-            temporibus? Reiciendis, quidem!
+            "I'm a loyal customer of this fragrance website, and I must say,
+            their collection of Dior fragrances is unbeatable! From the classic
+            and elegant J'adore to the seductive Hypnotic Poison, there's
+            something for every mood and personality. The ordering process is
+            smooth, and the delivery is prompt. Love, love, love!"
           </p>
         </div>
         <div class="testimonial-container">
-          <img src="/media/placeholder.jpg" class="testimonial-img" />
+          <img src="/media/testimonial3.jpg" class="testimonial-img" />
           <p class="testimonial-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-            dolorum recusandae, ab magni voluptatem quidem a asperiores
-            temporibus? Reiciendis, quidem!
+            "I've been searching for the perfect signature fragrance for years,
+            and I finally found it on this website! The range of Dior fragrances
+            is extensive, and the detailed descriptions helped me find my ideal
+            match - Dior Joy. The scent is pure bliss, and it lasts all day.
+            This website made my fragrance journey easy and enjoyable!"
           </p>
         </div>
       </div>
     </section>
     <footer>
       <div class="row-one">
-
         <div class="col-one">
-          <img src="/media/logo.png" class="footer-logo"/>
+          <img src="/media/logo.png" class="footer-logo" />
           <h1 class="logo-title">Red Devils Fragrances</h1>
         </div>
         <div class="col-two">
@@ -149,7 +154,6 @@
           <a href="">Testimonials</a>
         </div>
         <div class="col-three">
-          
           <a href="">About</a>
           <a href="">Contact</a>
           <a href="">Address</a>
