--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   <body>
     <nav class="navigation transparent">
       <div class="nav-left">
-        <a href="" class="links">Home</a>
-        <a href="" class="links">About</a><a href="" class="links">Products</a>
+        <a href="/index.html" class="links">Home</a>
+        <a href="/about.html" class="links">About</a>
+        <a href="/product.html" class="links">Products</a>
       </div>
       <div class="nav-center">
         <img class="logo" src="/media/logo.png" />
